# medicai

./: .env.example  .gitignore  README.md  USER_STORIES.md  __init__.py  dev.sh  main.py  medical_agent.py  medical_tools.py  patient_memory.py  pyproject.toml
backend/: __init__.py  api_routes.py  cli.py  medical_agent.py  medical_tools.py  models.py  patient_memory.py  server.py
backend/scripts/: reset_couchbase_data.py
backend/scripts/mock_data/: patients.json
backend/tests/: test_medicai.py
frontend/: README.md  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/components/: AIAssistant.tsx  ActiveSession.tsx  CalendarView.tsx  ConsultationPrep.tsx  PatientList.tsx  PatientProfile.tsx  SessionNotes.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Index.tsx
scripts/: reset_couchbase_data.py
speech-to-text/: README.md  package.json  server.js
speech-to-text-stream/: README.md  package-lock.json  package.json  server.js
speech-to-text-stream/public/: index.html  script.js  style.css
speech-to-text/public/: index.html  script.js
tests/: test_medicai.py
